--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@vuelidate/validators": "^2.0.0-alpha.2",
     "core-js": "^3.6.5",
     "vue": "^3.0.2",
-    "vue-router": "^4.0.0-beta.12"
+    "vue-router": "^4.0.0-beta.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -31,6 +32,7 @@
     "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0-0"
   }
